Copy posts from old site, header foot changes

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ copyright = "Kha Huynh"
 
 # Parameters
 [params]
-    subtitle = "Read a girl who dates books?"
+    subtitle = "Read a girl who dates books? ☃️"
     dateFmt = "01-02-2006"
 
 # Header
