Add boops and show post summaries on  individual tag pages

--- a/config.toml
+++ b/config.toml
@@ -42,3 +42,11 @@ paginate = 4
         name = "◐"
         url = "/goodies/"
         weight = 5
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
+[taxonomies]
+  tag = "tags"
